# nonefly-rust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: develop.yml
migrations/: 1_instance.sql  1_nonefly.sql
src/: bot.py  instance.rs  main.rs  nonebot.rs  storage.rs
